--- a/contact/index.html
+++ b/contact/index.html
@@ -50,7 +50,8 @@ SAIDEN Adam Ladachowski
 ul. Jana Nowaka-Jeziorańskiego 9/291 
 03-984 Warszawa
 
-NIP: 536-157-22-46
+NIP:    536-157-22-46
+REGON:  147201411
 </pre>
           </div>
           <div class="mastfoot">
