--- a/about/index.html
+++ b/about/index.html
@@ -79,12 +79,9 @@
 </p>
 
 <p class='lead'>
-  If you wish to contact me, my details are available<br/>
+  If you wish to contact me, my details are available <a class="btn btn-default btn-lg" href="/contact">Here</a>
 </p>
 
-<p class="lead">
-  <a class="btn btn-default btn-lg" href="/contact">Here</a>
-</p>
           </div>
           <div class="mastfoot">
   <div class="inner">
